--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
     text-align: center;
     font-weight: bold;
   }
+  
+  #codetext { 
+    /*position: absolute;*/
+    /*top: 100px;*/
+    /*left: 0;*/
+    width: 400px;
+    height: 600px;
+  }
 
  /*
   #cpuState, #cpuState td {
@@ -95,7 +103,8 @@
 <table id="control">
   <tr>
     <td>
-      <button id="run" title="Run the program untill it reaches given steps.">Run</button> Max steps: <input size="6" id="maxsteps"></input>
+      <button id="run" title="Run the program untill it reaches given steps.">Run</button>
+      <button id="runtocursor" title="Run the program untill it reaches cursor.">Runtocursor</button> Max steps: <input size="6" id="maxsteps"></input>
       <button id="prev" title="Go backward in time for a single machine instruction.">Step prev</button>
       <button id="next" title="Execute a single machine instruction from current step.">Step next</button>
     </td>
@@ -122,8 +131,8 @@
     <td>
       <table id="codeLabels">
         <tr>
-          <td>
-            <textarea id="codetext" name="codetext" rows="36" cols="60" spellcheck="false"></textarea>
+          <td>            
+			<div id="codetext"></div>
           </td>
         <tr class="spacerrow"></tr>
         <tr>
@@ -172,8 +181,12 @@
 </table>
 
 
+<script src=" https://cdn.jsdelivr.net/npm/ace-builds@1.22.0/src-min-noconflict/ace.min.js" type="text/javascript"></script>
+<script>
+    var editor = ace.edit("codetext");
+    editor.setTheme("ace/theme/solarized_light");
+</script>
 <!-- Include bundle. This exports a global symbol for accessing js8080sim -->
 <script src="js8080simBundle.js"></script>
 <script src="ui.js"></script>
-
 </body>
